[gd_scene load_steps=8 format=3 uid="uid://dkmx1mtiwidhc"]

[ext_resource type="Script" uid="uid://cmrv25vevelln" path="res://scenes/ui/multiplayer_menu.gd" id="1_3dlyf"]
[ext_resource type="Shader" uid="uid://ncwgb6028rsx" path="res://scenes/ui/main_menu.gdshader" id="2_nxn5k"]
[ext_resource type="Texture2D" uid="uid://bma355yye2ukd" path="res://background.png" id="3_oolvx"]
[ext_resource type="PackedScene" uid="uid://bfu8cj3s2kvu" path="res://scenes/ui/sound_button.tscn" id="4_u5qlk"]
[ext_resource type="PackedScene" uid="uid://fg3si73tjlgi" path="res://scenes/ui/vignette.tscn" id="5_fj61w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_btxxm"]
shader = ExtResource("2_nxn5k")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dlyf"]
bg_color = Color(0.14902, 0.168627, 0.266667, 0.960784)

[node name="MultiplayerMenu" type="CanvasLayer"]
script = ExtResource("1_3dlyf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_btxxm")
position = Vector2(298, 171)
rotation = -0.523598
texture = ExtResource("3_oolvx")
region_enabled = true
region_rect = Rect2(0, 0, 1200, 1200)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 7

[node name="DispayNameLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Display Name:"

[node name="DisplayNameTextEdit" type="TextEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
placeholder_text = "Display Name"
scroll_fit_content_height = true

[node name="HostButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_u5qlk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Host"

[node name="PortTextEdit" type="TextEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3000"
placeholder_text = "Host Port"
scroll_fit_content_height = true

[node name="JoinButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_u5qlk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Join"

[node name="IPAddressTextEdit" type="TextEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP Address"
scroll_fit_content_height = true

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_u5qlk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Vignette" parent="." instance=ExtResource("5_fj61w")]

[node name="ErrorContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="ErrorContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_3dlyf")

[node name="MarginContainer" type="MarginContainer" parent="ErrorContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ErrorContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="ErrorContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Error!"

[node name="ClientErrorLabel" type="Label" parent="ErrorContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "An error occurred when connecting to the server."

[node name="ServerErrorLabel" type="Label" parent="ErrorContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "An error occurred when creating the server."

[node name="ErrorButton" parent="ErrorContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_u5qlk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "OK"
